# Spirit

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  License.md  README.md  requirements.txt  spirit.natvis
source/: Application.cpp  Application.hpp  CMakeLists.txt  CMakePresets.json  Zephyr.cpp
source/Collision/: BoundingBox.cpp  BoundingBox.hpp  BoundingBoxTree.cpp  BoundingBoxTree.hpp  CollisionSystem.cpp  CollisionSystem.hpp
source/Component/: BoundingBox.hpp  Camera.cpp  Camera.hpp  Collider.cpp  Collider.hpp  FirstPersonCamera.cpp  FirstPersonCamera.hpp  Input.cpp  Input.hpp  Label.cpp  Label.hpp  Lights.cpp  Lights.hpp  Mesh.cpp  Mesh.hpp  ParticleEmitter.cpp  ParticleEmitter.hpp  PointLight.hpp  RigidBody.cpp  RigidBody.hpp  Terrain.cpp  Terrain.hpp  Texture.cpp  Texture.hpp  Transform.cpp  Transform.hpp  TwoAxisCamera.cpp  TwoAxisCamera.hpp  Vertex.hpp  ViewInformation.hpp
source/Data/: Camera.cpp  Camera.hpp  Collider.cpp  Collider.hpp  DirectionalLight.cpp  DirectionalLight.hpp  Image.cpp  Image.hpp  Light.hpp  Mesh.cpp  Mesh.hpp  PointLight.cpp  PointLight.hpp  SpotLight.cpp  SpotLight.hpp  Texture.hpp  Transform.cpp  Transform.hpp
source/ECS/: Component.hpp  ComponentManager.hpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp  Meta.hpp  Storage.cpp  Storage.hpp
source/ECS/Component/: Camera.cpp  Camera.hpp  DirectionalLight.cpp  DirectionalLight.hpp  Mesh.cpp  Mesh.hpp  PointLight.cpp  SpotLight.cpp  SpotLight.hpp  Texture.hpp  Transform.cpp  Transform.hpp
source/ECS/Entity/: Entity.hpp  Meta.hpp  Storage.cpp  Storage.hpp
source/ECS/Managers/: CameraManager.cpp  CameraManager.hpp  MeshManager.cpp  MeshManager.hpp  TextureManager.cpp  TextureManager.hpp
source/ECS/System/: CameraSystem.cpp  CameraSystem.hpp  ComponentManager.hpp  EntitySystem.cpp  EntitySystem.hpp  MeshSystem.cpp  MeshSystem.hpp  TextureSystem.cpp
source/FileSystem/: FileSystem.cpp  FileSystem.hpp
source/Geometry/: AABB.cpp  AABB.hpp  Cone.cpp  Cone.hpp  Constants.hpp  Cuboid.cpp  Cuboid.hpp  Cylinder.cpp  Cylinder.hpp  Frustrum.cpp  Frustrum.hpp  GJK.cpp  GJK.hpp  Geometry.cpp  Geometry.hpp  Intersect.cpp  Intersect.hpp  Line.cpp  Line.hpp  LineSegment.cpp  LineSegment.hpp  Plane.cpp  Plane.hpp  Point.hpp  Quad.cpp  Quad.hpp  QuadKey.hpp  QuadTree.hpp  Ray.hpp  Shape.hpp  Sphere.cpp  Sphere.hpp  TriTri.cpp  TriTri.hpp  Triangle.cpp  Triangle.hpp
source/Input/: CMakeLists.txt  GLFWInput.cpp  Input.cpp  Input.hpp  InputAPI.hpp
source/Interface/: DrawCall.hpp  GraphicsAPI.cpp  GraphicsAPI.hpp  InputAPI.hpp
source/JobSystem/: JobSystem.cpp  JobSystem.hpp  Test.hpp
source/Logger/: CMakeLists.txt  Logger.cpp  Logger.hpp
source/OpenGL/: DebugRenderer.cpp  DebugRenderer.hpp  DrawCall.cpp  DrawCall.hpp  GLState.cpp  GLState.hpp  GridRenderer.cpp  GridRenderer.hpp  LightPositionRenderer.cpp  LightPositionRenderer.hpp  OpenGLRenderer.cpp  OpenGLRenderer.hpp  OpenGLWindow.cpp  ParticleRenderer.cpp  ParticleRenderer.hpp  PhongRenderer.cpp  PhongRenderer.hpp  SelectionRenderer.cpp  SelectionRenderer.hpp  Shader.cpp  Shader.hpp  ShadowMapper.cpp  ShadowMapper.hpp  Types.cpp  Types.hpp
source/OpenGL/GLSL/: DebugRender.vert  collisionGeometry.frag  collisionGeometry.vert  colour.frag  colour.vert  depthView.frag  depthView.vert  global_sum.comp  grid.frag  grid.vert  increment.comp  lightMap.frag  light_position.frag  light_position.vert  particle.frag  particle.geom  particle.vert  particle_update.comp  phong-texture.frag  phong-texture.vert  phong-uColour.frag  phong-uColour.vert  phong.frag  phong.vert  phong_terrain.frag  phong_terrain.vert  prefix_sum_first_pass.comp  prefix_sum_second_pass.comp  screenTexture.frag  screenTexture.vert  selectionEdge.frag  selectionEdge.vert  selectionMask.frag  selectionMask.vert  shadowDepth.frag  shadowDepth.vert  skybox.frag  skybox.vert  texture1.frag  texture1.vert  (+6 more)
source/OpenGLAPI/: GLFWInput.cpp  GLFWInput.hpp  GLState.cpp  GLState.hpp  OpenGLAPI.cpp  OpenGLAPI.hpp  OpenGLWindow.cpp  OpenGLWindow.hpp  Shader.cpp  Shader.hpp
source/OpenGLAPI/GLSL/: colour.vert  depthView.frag  depthView.vert  lightMap.frag  lightMap.vert  material.frag  material.vert  screenTexture.frag  skybox.frag  skybox.vert  texture.frag  texture.vert  texture1.frag  texture1.vert  texture1Instanced.frag  texture1Instanced.vert  texture2.frag  uniformColour.frag  uniformColour.vert  visualiseNormal.geom  visualiseNormal.vert
source/Platform/: Core.cpp  Core.hpp  Input.cpp  Input.hpp  InputDefinitions.hpp  Window.cpp  Window.hpp
source/Renderer/: CMakeLists.txt  Camera.cpp  Camera.hpp  DrawCall.cpp  DrawCall.hpp  GraphicsAPI.hpp  ImGuiConfig.hpp  LightManager.cpp  LightManager.hpp  Mesh.hpp  MeshManager.cpp  MeshManager.hpp  Renderer.cpp  Renderer.hpp  Texture.cpp  Texture.hpp  TextureManager.cpp  TextureManager.hpp
source/Renderer/GraphicsContext/: CMakeLists.txt  Context.hpp  OpenGLContext.cpp  OpenGLContext.hpp
source/System/: AssetManager.cpp  AssetManager.hpp  CollisionSystem.cpp  CollisionSystem.hpp  IPhysicsSystem.hpp  InputSystem.cpp  InputSystem.hpp  MeshSystem.cpp  MeshSystem.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp  PhysicsSystemJolt.cpp  PhysicsSystemJolt.hpp  SceneSystem.cpp  SceneSystem.hpp  SerialisationSystem.hpp  TerrainSystem.cpp  TerrainSystem.hpp  TextureSystem.cpp  TextureSystem.hpp
source/Test/: MemoryCorrectnessChecker.cpp  MemoryCorrectnessChecker.hpp  MemoryCorrectnessItem.cpp  MemoryCorrectnessItem.hpp  TestMain.cpp  TestManager.cpp  TestManager.hpp  UnitTest.cpp  UnitTest.hpp  UnitTester.cpp  UnitTester.hpp
source/UI/: Console.cpp  Console.hpp  Editor.cpp  Editor.hpp  ImGuiConfig.hpp  ImUserConfig.hpp  Visualisers.cpp  Visualisers.hpp
source/Utility/: Config.hpp.in  EventDispatcher.hpp  File.cpp  File.hpp  FunctionTraits.hpp  Geometry.hpp  Logger.cpp  Logger.hpp  MeshBuilder.hpp  Noise.hpp  Performance.hpp  ResourceManager.hpp  Screenshot.cpp  Screenshot.hpp  Serialise.hpp  Stopwatch.hpp  Timer.hpp  Types.hpp  Utility.cpp  Utility.hpp
source/Window/: OpenGLWindow.cpp  OpenGLWindow.hpp
(+44 files in other folders)
